# fairdata-ansible-download-service

./: .ansible_lint  .gitignore  .gitlab-ci.yml  Dockerfile-ssh  README.md  pyproject.toml  requirements.txt
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  create.yml  molecule.yml
tasks/: download-config.yml  download-debug.yml  download-generator-service.yml  download-generator-systemd.yml  download-gunicorn.yml  download-mounts.yml  download-nginx.yml  download-rabbitmq.yml  download-repository.yml  download-server-service.yml  download-server-systemd.yml  download-sqlite.yml  download-systemd.yml  download-user.yml  main.yml
templates/: fairdata-download-generator.env.j2  fairdata-download-generator.service.j2  fairdata-download-server-gunicorn.py.j2  fairdata-download-server-nginx.conf.j2  fairdata-download-server.env.j2  fairdata-download-server.service.j2  fairdata-download-server.socket.j2  fairdata-download-service-devel.env.j2  fairdata-download-service-settings.cfg.j2
