[tool.poetry]
name = "fairdata-ansible-download-service"
version = "0.1.0"
description = ""
authors = ["tonurmi <toni.nurmi@csc.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
molecule = {extras = ["docker"], version = "^3.5.2"}
ansible = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
